--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
     "pg": "^7.4.3",
-    "pg-pool": "^2.0.3"
+    "pg-pool": "^2.0.3",
+    "pool": "^0.4.1"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
     "mocha": "^5.2.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ludwej/waiter-availability-webapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ludwej/waiter-availability-webapp/issues"
+  },
+  "homepage": "https://github.com/ludwej/waiter-availability-webapp#readme",
   "description": ""
 }
